Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.4, 6.8.0 Beta1, 6.8.0 Beta2
-
None
-
-
746cdfc08 (dev), 6d65c33cd (6.8), a48b236ac (6.7)
Description
When clicking or touching an HTML <select> element (a drop-down menu), the entire program crashes. This issue appears to be linked to EGLFS/KMS environments. Notably, on my X11 host with QT 6.4, this crash does not occur.
This bug may be related to a similar issue previously identified in Wayland environments: https://bugreports.qt.io/browse/QTBUG-81952
Enabling QT logging (QT_LOGGING_RULES=qt.webenginecontext.debug=true) provides the following error message:
[1202:1222:0100/000000.130787:ERROR:command_buffer_proxy_impl.cc(128)] ContextResult::kTransientFailure: Failed to send GpuControl.CreateCommandBuffer.
Attachments
Issue Links
- is duplicated by
-
QTBUG-129175 [Boot2Qt][WebEngine] Opening dropdown in webengine browser causes the app to crash
-
- Closed
-
For Gerrit Dashboard: QTBUG-119908 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
583322,2 | Fix not working popup with qquick on eglfs | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
586737,2 | Fix not working popup with qquick on eglfs | 6.8 | qt/qtwebengine | Status: MERGED | +2 | 0 |
586816,2 | Fix not working popup with qquick on eglfs | 6.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |