Fix not working popup with qquick on eglfs

After refactoring in 5d1ef38 we lost popups with qquick.
Unfortunately we do not have tests for it as we do
not run eglfs on ci.

Fixes: QTBUG-119908
Change-Id: Iea6cadf96dcac488898bb31132938fe8020d4d79
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 746cdfc088eaf4171d8dc1dc0ae489cdd846c68a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 6d65c33cd660e5b92df15c7785fe0f9bf54c0547)